[metadata]
name = pyvitals
version = 0.3.0
author = huantian
author_email = davidtianli@gmail.com
description = Python tools for rdlevels
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/huantianad/py-vitals
project_urls =
    Bug Tracker = https://github.com/huantianad/py-vitals/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
install_requires =
    httpx
    python-rapidjson
